# cpython

./: .editorconfig  .gitignore  CMakeLists.txt
Include/: object.h
Lib/importlib/: _bootstrap_external.py
Modules/: _localemodule.c  _pickle.c  _ssl.c  _winapi.c  faulthandler.c  mmapmodule.c  overlapped.c  posixmodule.c  selectmodule.c  socketmodule.c  socketmodule.h  timemodule.c
Modules/_ctypes/: _ctypes.c  _ctypes_test.c  callbacks.c  callproc.c  ctypes.h  stgdict.c
Modules/_io/: fileio.c  textio.c  winconsoleio.c
Modules/clinic/: _winapi.c.h
Objects/: methodobject.c
Objects/clinic/: unicodeobject.c.h
PC/: _msi.c  config.c  getpathp.c  msvcrtmodule.c  pyconfig.h  winreg.c  winsound.c
PCbuild/: _asyncio.vcxproj  _asyncio.vcxproj.filters  _bz2.vcxproj  _bz2.vcxproj.filters  _ctypes.vcxproj  _ctypes.vcxproj.filters  _ctypes_test.vcxproj  _ctypes_test.vcxproj.filters  _decimal.vcxproj  _decimal.vcxproj.filters  _elementtree.vcxproj  _elementtree.vcxproj.filters  _freeze_importlib.vcxproj  _freeze_importlib.vcxproj.filters  _hashlib.vcxproj  _hashlib.vcxproj.filters  _lzma.vcxproj  _lzma.vcxproj.filters  _msi.vcxproj  _msi.vcxproj.filters  _multiprocessing.vcxproj  _multiprocessing.vcxproj.filters  _overlapped.vcxproj  _overlapped.vcxproj.filters  _queue.vcxproj  _queue.vcxproj.filters  _socket.vcxproj  _socket.vcxproj.filters  _sqlite3.vcxproj  _sqlite3.vcxproj.filters  _ssl.vcxproj  _ssl.vcxproj.filters  _testbuffer.vcxproj  _testbuffer.vcxproj.filters  _testcapi.vcxproj  _testcapi.vcxproj.filters  _testconsole.vcxproj  _testconsole.vcxproj.filters  _testembed.vcxproj  _testembed.vcxproj.filters  (+50 more)
Python/: Python-ast.c  bootstrap_hash.c  dynload_win.c  fileutils.c  importlib_external.h  pytime.c  sysmodule.c
